--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;   
-  padding: 60px 30px;
+  padding: 30px 60px 30px;
   min-height: 100vh;
   box-sizing: border-box;
   color: white;
@@ -12,6 +12,7 @@
 
 .form-controls {
   display: flex;
+  margin-top: 30px;
 }
 
 .add {
